# Chess

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Bishop.h  Board.h  Figure.h  King.h  Knight.h  Move.h  Pawn.h  Queen.h  RawMoveHelpers.h  Rook.h  types.h
src/: Bishop.cpp  Board.cpp  Figure.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  RawMoveHelpers.cpp  Rook.cpp
tests/: test_board.cpp
